--- a/style.css
+++ b/style.css
@@ -17,14 +17,12 @@ body{
     justify-content: center;
 }
 
-
 .instagram-wrapper{
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: start;
     width: 60%;
     height: 100vh;
-
 }
 
 .instagram-phone{
@@ -32,9 +30,36 @@ body{
     align-items: center;
     justify-content: center;
     width: 50%;
-
 }
 
-.instagram-phone img{
+.instagram-phone img {
     height: 50rem;
+}
+
+.instagram-continue{
+    display: flex;
+    align-items: center; /* Horizontal*/
+    justify-content: space-around; /* Vertical*/
+    flex-direction: column;
+    width: 50%;
+    height: 34rem;
+}
+
+.group{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    padding: 1.3rem 0;
+    border: 1px solid lightgray;
+}
+
+.group:nth-child(1) {
+    min-height: 19rem;
+}
+
+.instagram-logo{
+    height: 3rem;
 }
